--- a/example.tex
+++ b/example.tex
@@ -132,6 +132,11 @@ plt.savefig(sys.stdout.buffer, format = 'png', dpi = 1200, transparent = True)
 
 \rinssvg{svg}{https://wikimedia.org/api/rest_v1/media/math/render/svg/e0c5b66a8fed889a35d2ea5ff95f0c604351346d}{3yC9Cu5w2uIKfAy8LEZERNCVDG6zkztJ3rc7PaqnSeA=}
 
+\ssec CSV
+
+\guix{csv}{\readcsv{(local-file "foo.csv")}}
+\maybeinput{\guixref{csv}}
+
 \ssec GraphViz 1
 
 \graphviz{
