Actually PanOpTeXum can work with a static pandoc

--- a/example.tex
+++ b/example.tex
@@ -132,10 +132,10 @@ plt.savefig(sys.stdout.buffer, format = 'png', dpi = 1200, transparent = True)
 
 \rinssvg{svg}{https://wikimedia.org/api/rest_v1/media/math/render/svg/e0c5b66a8fed889a35d2ea5ff95f0c604351346d}{3yC9Cu5w2uIKfAy8LEZERNCVDG6zkztJ3rc7PaqnSeA=}
 
-\ssec CSV
+\pg;
 
-\guix{csv}{\readcsv{(local-file "foo.csv")}}
-\maybeinput{\guixref{csv}}
+\insproc{example.md}
+\insproc{example.csv}
 
 \ssec GraphViz 1
 
