Embed PDFs instead of PNGs
It's a drop-in replacement

--- a/example.tex
+++ b/example.tex
@@ -106,7 +106,7 @@ axs[0].bar(names, values)
 axs[1].scatter(names, values)
 axs[2].plot(names, values)
 fig.suptitle('Categorical Plotting')
-plt.savefig(sys.stdout.buffer, format = 'png', dpi = 1200, transparent = True)
+plt.savefig(sys.stdout.buffer, format = 'pdf', transparent = True)
 \endgt
 
 \insappic{matplotlib}%
